# mtpp

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml  lint.yml  test.yml
mtpp/: __init__.py  core.py  csv.py  dsv.py  excel.py  function.py  pandas.py  python.py  tsv.py  xml.py
tests/: constant.py  test_mtppfilecsv.py  test_mtppfileexcel.py  test_mtppfiletsv.py  test_mtppfilexml.py  test_mtpppandas.py  test_mtpppython.py
tests/data/: sampledata-sjis.csv  sampledata-sjis.tsv  sampledata-sjis.xml  sampledata-utf8.csv  sampledata-utf8.tsv  sampledata-utf8.xml  sampledata.xlsx
