[tool.poetry]
name = "mtpp"
version = "0.1.0"
description = ""
authors = ["maphorie"]
readme = "README.md"
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.3"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.1"
ruff = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
